@@ -39,12 +39,10 @@ import com.mysql.jdbc.Util;
 public class MysqlOldPasswordPlugin implements AuthenticationPlugin {
 
     private Connection connection;
-    private Properties properties;
     private String password = null;
 
     public void init(Connection conn, Properties props) throws SQLException {
         this.connection = conn;
-        this.properties = props;
     }
 
     public void destroy() {
@@ -73,9 +71,6 @@ public class MysqlOldPasswordPlugin implements AuthenticationPlugin {
         Buffer bresp = null;
 
         String pwd = this.password;
-        if (pwd == null) {
-            pwd = this.properties.getProperty("password");
-        }
 
         if (fromServer == null || pwd == null || pwd.length() == 0) {
             bresp = new Buffer(new byte[0]);
